Variables for spacing, nasty SVG fix

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,9 +1,9 @@
 .site-footer {
   background-color: $background--dark;
   color: $white;
-  padding: 1rem;
+  padding: $content-margin;
   @include mq(medium) {
-    padding: 3rem 1rem;
+    padding: ($content-margin * 3) $content-margin;
   }
   &__list {
     margin-bottom: ($content-margin * 2);
